# ozlem-murzoglu

./: .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .prettierrc.json  .roomodes  .stylelintrc.md3.json  3rdpartylicenses.txt  Angular-Illustration-Talimatnamesi.md  BRIGHT-FUTURES.md  CLAUDE.md  Kaynaklar-Tasarim-Talimatnamesi.md  MD3_IMPLEMENTATION_SUMMARY.md  README.md  SAGLIKLI-UYKULAR.md  SEO_PLANI.md  TRIPLE-P.md  angular.json  build_error_2.txt  build_error_3.txt  capture-screenshots.js  check-footer.js  check-hero-content.js  check-hero.js  check-mobile-menu.js  check-mobile-overflow.js  check-nav-elements.js  console-check.spec.js  convert-general.ps1  convert-vaccines.ps1  debug-hero-layout.js  debug-page.js  find-place-id.js  firebase.json  fix-resource-translations.ps1  google-ads-manager.skill  inspect-nav-rail.js  jest.config.js  next.config.js  old-hero.ts  (+36 more)
saglik-petegim/apps/backend_app/: .dockerignore  .env.example  .gcloudignore  DEPLOY_NOW.bat  Dockerfile  Dockerfile.dev  Dockerfile.rag  Makefile  README.md  alembic.ini  auto_pdf_ingestion.py  bulut_klinik_login_page.html  cloudbuild-fixed.yaml  cloudbuild.yaml  deploy-cloud-run.bat  deploy-cloud-run.sh  deploy-simple.bat  deploy-with-gcloud.ps1  docker-compose.prod.yml  docker-compose.yml  family_relationship_schema.md  firebase_functions.py  gemini_config.py  ingest_pdfs.py  processed_pdfs.json  pyproject.toml  pytest.ini  quick_ingest.py  rag_server.py  rag_server_with_patient_data.py  requirements-rag.txt  requirements.txt  simple_ingest.py  test_chatbot.py  test_pinecone_direct.py  test_single_pdf.py
saglik-petegim/apps/backend_app/alembic/: env.py
saglik-petegim/apps/backend_app/app/: __init__.py  main.py
saglik-petegim/apps/backend_app/app/api/: __init__.py  deps.py
saglik-petegim/apps/backend_app/app/core/: celery.py  config.py  database.py  security.py
saglik-petegim/apps/backend_app/app/middleware/: logging.py  rate_limit.py  security.py
saglik-petegim/apps/backend_app/app/models/: __init__.py  appointment.py  audit.py  base.py  bright_futures.py  growth.py  medical_record.py  notification.py  patient.py  prescription.py  user.py  vaccination.py
saglik-petegim/apps/backend_app/app/schemas/: __init__.py  base.py  bright_futures.py  patient.py  user.py
saglik-petegim/apps/backend_app/app/services/: bright_futures_service.py  guidance_service.py  immunization_service.py  milestone_service.py  risk_assessment_service.py  screening_service.py  supabase_service.py
saglik-petegim/apps/backend_app/app/tasks/: __init__.py  appointments.py  email.py  maintenance.py  notifications.py  reports.py
saglik-petegim/apps/backend_app/app/utils/: exceptions.py
saglik-petegim/apps/backend_app/config/: appointment_config.json
saglik-petegim/apps/backend_app/data/bulut_klinik/: sync_report_20250828_075104.json  sync_report_20250828_075447.json
saglik-petegim/apps/backend_app/data/processed/: access_report_20250822_141420.json  access_report_20250822_141549.json  patients.json  (+2 more)
saglik-petegim/apps/backend_app/scripts/: reset-user-password.js  run_tests.sh  seed_data.py  start.sh
saglik-petegim/apps/backend_app/tests/: __init__.py  conftest.py  test_appointments.py  test_auth.py  test_patients.py
(+1439 files in other folders)
